# quant_trade

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
configs/: default.yaml
deploy/systemd/: quant-trade-daily.service  quant-trade-daily.timer
docs/: design.md
src/quant_trade/: __init__.py  cli.py  config.py  models.py  notifications.py  runs.py  services.py
src/quant_trade/backtest/: __init__.py  engine.py  metrics.py  report.py
src/quant_trade/dashboard/: app.py
src/quant_trade/data/: __init__.py  base.py  calendar.py  minute_archive.py  minute_directory.py  quality.py  retry.py  router.py  storage.py
src/quant_trade/data/providers/: __init__.py  akshare.py  baostock.py  common.py  tushare.py
src/quant_trade/pipelines/: __init__.py  daily.py
src/quant_trade/reports/: __init__.py  market_review.py  render.py
src/quant_trade/strategies/: __init__.py  base.py  etf_rotation.py  logbias.py  microcap.py  registry.py
tests/: conftest.py  test_adjustment.py  test_backtest_report.py  test_backtest_strategies.py  test_calendar.py  test_cli.py  test_config.py  test_daily_pipeline.py  test_market_review.py  test_metrics.py  test_minute_archive.py  test_minute_directory.py  test_providers.py  test_retry_router.py  test_services.py
